syntax = "proto3";

package solana.spl.token.v1;

message Events {
  repeated Transaction transactions = 1;
}

message Transaction {
    bytes signature = 1;
    bytes fee_payer = 2; // Fee payer account address.
    repeated bytes signers = 3; // Signers of the transaction.
    uint64 fee = 4; // Lamports paid for this instruction.
    uint64 compute_units_consumed = 5; // Compute units consumed by this instruction.
    repeated Instruction instructions = 6; // Instructions executed in this transaction.
    repeated TokenBalance pre_token_balances = 7; // Token balances before the transaction.
    repeated TokenBalance post_token_balances = 8; // Token balances after the transaction.
}

message TokenBalance {
  bytes program_id = 1;
  bytes account = 2;
  bytes mint = 3;
  uint64 amount = 4;
  uint32 decimals = 5; // uint8
}

message Instruction {
    bytes program_id = 1;
    uint32 stack_height = 2;
    bool is_root = 3; // Indicates if this instruction is a root instruction.
    oneof instruction {
        // https://github.com/solana-program/token-2022
        Transfer transfer = 10;
        Transfer mint = 11;
        Transfer burn = 12;
        InitializeMint initialize_mint = 13;
        InitializeAccount initialize_account = 14;
        Approve approve = 15;
        Revoke revoke = 16;
    }
}

message Transfer {
  // -- authority --
  bytes authority = 1;
  repeated bytes multisig_authority = 2;

  // -- event --
  bytes source = 10;
  bytes destination = 11;
  uint64 amount = 12;
  // SPL-2022
  optional bytes mint = 13;
  optional uint32 decimals = 14; // uint8
}

message InitializeMint {
  bytes mint = 1;
  bytes mint_authority = 2;
  optional bytes freeze_authority = 3;
  uint32 decimals = 4; // uint8
}

message InitializeAccount {
  bytes account = 1;
  bytes mint = 2;
  bytes owner = 3;
}

message Approve {
  // -- authority --
  bytes authority = 1;
  repeated bytes multisig_authority = 2;

  // -- event --
  bytes source = 10;
  optional bytes mint = 11;
  bytes delegate = 12;
  bytes owner = 13;
  uint64 amount = 14;
  optional uint32 decimals = 15; // uint8
}

message Revoke {
  // -- authority --
  bytes authority = 1;
  repeated bytes multisig_authority = 2;

  // -- event --
  bytes source = 10;
  bytes owner = 11;
}
